--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,15 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 14px "Droid Sans", sans-serif;
+  color: #424242 ;
 }
 
 a {
-  color: #00B7FF;
+  color: #1976D2;
+  text-decoration: none;
+
+}
+a:hover{
+  color: #2196F3;
+  transition: .5s;
 }
